styles.css
@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
body {
  font-family: 'roboto', 'sans-serif';
  margin: 0;
}

main {
  max-width: 600px;
  margin: auto;
  padding: 20px;
}

button {
  min-width: 64px;
  padding: 2px 16px;
  height: 36px;
  border: none;
  border-radius: 5px;
  background: #FEDBD0;
  color: #442C2E;
  font-weight: 500;
  font-size: 14px;
  text-transform: uppercase;
  font-family: 'roboto', sans-serif;
  box-shadow: 1px 1px 1px lightgrey;
  margin: 10px 10px 10px 0;
}
button:hover {
  cursor: pointer;
  opacity: 0.9;
}
button:focus {
  outline: none;
  border: 1px solid #442C2E;
}
button:disabled {
  cursor: default;
  background: lightgrey;
  opacity: 1;
  color: grey;
}
button.secondary {
  background: transparent;
  border: 1px solid #FEDBD0;
  box-shadow: none;
}

.card {
  background: white;
  padding: 16px;
  display: flex;
  flex-direction: column;
  border-radius: 5px;
  box-shadow: 0 1px 1px 0 rgba(66, 66, 66, 0.08), 0 1px 3px 1px rgba(66, 66, 66, 0.16);
  margin: 20px 0;
}

.collapsible {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  cursor: pointer;
  /* for header section in collapsible container */
  margin-top: 10px;
  font-weight: bold;
  display: flex;
  flex-direction: row;
  align-items: center;
  background: #FEDBD0;
  color: #442C2E;
  padding: 16px;
}
.collapsible:after {
  content: '\002B'; /* Unicode character for "plus" sign (+) */
  color: #442C2E;
  float: right;
  margin-left: 5px;
}
.active:after {
  content: "\2212"; /* Unicode character for "minus" sign (-) */
}
.collapsible-content {
  padding: 0 18px;
  display: none;
  overflow: hidden;
  background-color: #f5f5f5;
}

